# zfs-rs

./: Cargo.toml  Readme.md  TODO.txt  manual-freeform.txt
docs/: index.html  zfs-rs.8  zfs-rs.8.html  zfs-rs.8.ronn
misc/: sender.py  zfs-send-vP-full-1  zfs-send-vP-intervening-2  zfs-send-vP-intervening-3  zfs-send-vP-sample-1
src/: comm.rs  cutting_floor.rs  dataset.rs  machine.rs  main.rs  progressbar.rs  replicate.rs  retention.rs
src/dataset/tests/: baal_tank_phone.list  tank_webdata.list  test_comm.result  test_last_common_or_divergence.result  test_parse_zfs.result  test_render_tagged_snaps_for_deletion.result  test_tag_snaps_for_deletion.result  zelda_webdata-divergence.list  zelda_webdata-holds-and-weird-name.list  zelda_webdata-nocommon.list  zelda_webdata.list
