[package]
name = "zfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
subprocess = "0.2.8"
regex = "1"
itertools = "0.10.1"
thiserror = "1.0.30"
anyhow = "1.0.48"
clap = "3.0.0-beta.5"
rand = "0.8.4"